--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/setup-node@master
       - run: npm install
       - run: npm run build
-      - run: tar -zcvf release.tgz dist package.json package-lock.json pm2.config.json
+      - run: tar -zcvf release.tgz .nuxt package.json package-lock.json pm2.config.json static nuxt.config.js
       # 把.nuxt、nuxt.config.js等文件，打包压缩为release.tgz
 
       # 第三步：发布 Release
@@ -66,9 +66,9 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           # port: ${{ secrets.PORT }}
           script: | # 执行命令（运行到服务器）cd：要确保服务器有这个目录； wget：下载上一步的release到服务器； tar：解压； 安装依赖；启动服务
-            cd /root/project/blog
+            cd /root/project/blog-web
             rm -rf release.tgz
-            wget https://github.com/zhoujingang/blog-api/releases/download/${{ steps.vars.outputs.tag }}/release.tgz
+            wget https://github.com/zhoujingang/blogs/releases/download/${{ steps.vars.outputs.tag }}/release.tgz
             tar zxvf release.tgz
             npm install --production
             pm2 reload pm2.config.json
